<resources>
    <string name="app_name">Movies</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reviews">Reviews</string>
    <string name="latest">Latest</string>

    <string name="movie_list_title">Movies</string>
    <string name="movie_details_title">Details</string>
    <string name="movie_list_popular">Popular Movies</string>
    <string name="movie_average">Vote Average:</string>
    <string name="movie_adult">Adults Only:</string>>
    <string name="movie_budget">Bugdet</string>
    <string name="movie_overview">Overview:</string>
    <string name="movie_popularity">Popularity:</string>
    <string name="movie_revenue">Revenue:</string>
    <string name="movie_runtime">Runtime:</string>
    <string name="movie_status">Status:</string>
    <string name="movie_tagline">Tagline:</string>
    <string name="movie_vote_count">Vote Count:</string>
</resources>